--- a/galaxy.yml
+++ b/galaxy.yml
@@ -22,3 +22,4 @@ dependencies:
   "vmware.vmware_rest": ">=2.3.1"
   "community.vmware": ">=4.4.0"
   "vmware.vmware": ">=1.0.0"
+  "containers.podman": ">=1.15.4"
